--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -143,7 +143,7 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 04/30/2018<br>
+                <span>Report Date:</span> 05/01/2018<br>
                 <span>Organism:</span> Toy box
             </div>
         </header>
@@ -158,9 +158,12 @@
                 Reads for Toy box were submitted to the comprehensive genome analysis
                 service at PATRIC<sup class="reference">[<a href="#citation-1">1</a>]</sup>.
             Based on the annotation statistics and a comparison to other genomes in PATRIC within
-            this same species, this genome appears to be of Poor quality.  Details of the analysis,
-            including genes of interest (Specialty Genes), a functional categorization (Subsystems) and a
-            phylogenetic tree (Phylogenetic Analysis) are provided below.
+            this same species, this genome appears to be of Poor quality.
+                The reasons affecting the quality of genome follows:
+            <i>Genome too short, Low CheckM completeness score, Abnormal CDS ratio</i>.
+            Details of the analysis, including genes of
+            interest (Specialty Genes), a functional categorization (Subsystems), 
+            and a phylogenetic tree (Phylogenetic Analysis) are provided below.
         </section>
 
 
@@ -240,6 +243,10 @@
                         <tr><td>Total Time</td>
                         <td class="align-right">7 minutes and 20 seconds</td>
                     </tr>
+                    <tr>
+                        <td>Selected Recipe</td>
+                        <td class="align-right">auto</td>
+                    </tr>
 
                 </tbody>
             </table>
@@ -283,7 +290,6 @@
                 </thead>
 
                 <tbody>
-                    <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                         <tr>
                             <td>CDS</td>
                             <td class="align-right">
@@ -367,7 +373,6 @@
                 </thead>
 
                 <tbody>
-                    <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                     <tr>
                         <td>Hypothetical proteins</td>
                         <td class="align-right">18</td>
@@ -11264,23 +11269,6 @@
         </section>
 
 
-        <!--
-          ## Genome Quality
-        -->
-        <section>
-            <h2>Genome Quality</h2>
-            <p>
-                Based on an examination of the annotation statistics and a comparison to
-                other genomes in PATRIC<sup class="reference">[<a href="#citation-1">1</a>]</sup> within this same species,
-                this genome appears to be of <b>Poor</b> quality.
-            </p>
-            <p>
-                    The reasons affecting the quality of genome follows:
-                <i>Genome too short, Low CheckM completeness score, Abnormal CDS ratio</i>
-            </p>
-
-
-        </section>
 
 
 
@@ -11291,9 +11279,9 @@
             <h2>Specialty Genes</h2>
             <p>
                 Many of the genes annotated in  have homology to known
-                transporters<sup class="reference">[<a href="#citation-9">9</a>]</sup>, virulence factors<sup class="reference">[<a href="#citation-10">10</a>]</sup><sup class="reference">[<a href="#citation-11">11</a>]</sup>,
-                drug targets<sup class="reference">[<a href="#citation-12">12</a>]</sup><sup class="reference">[<a href="#citation-13">13</a>]</sup>,
-                and antibiotic resistance genes<sup class="reference">[<a href="#citation-14">14</a>]</sup>.
+                transporters<sup class="reference">[<a href="#citation-8">8</a>]</sup>, virulence factors<sup class="reference">[<a href="#citation-9">9</a>]</sup><sup class="reference">[<a href="#citation-10">10</a>]</sup>,
+                drug targets<sup class="reference">[<a href="#citation-11">11</a>]</sup><sup class="reference">[<a href="#citation-12">12</a>]</sup>,
+                and antibiotic resistance genes<sup class="reference">[<a href="#citation-13">13</a>]</sup>.
 
                 The number of genes and the specific source database where homology was found is provided (<table-ref>Table 4</table-ref>).
             </p>
@@ -11347,13 +11335,13 @@
             <h2>Subsystem Analysis</h2>
             <p>
                 A subsystem is a set of proteins that together implement a specific biological
-                process or structural complex<sup class="reference">[<a href="#citation-15">15</a>]</sup> and PATRIC annotation
+                process or structural complex<sup class="reference">[<a href="#citation-14">14</a>]</sup> and PATRIC annotation
                 includes an analysis of the subsystems unique to each genome.
                 An overview of the subsystems for this genome is provided in <fig-ref>Figure 2</fig-ref>.
             </p>
 
             <fig-num>Figure 2</fig-num>
-            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,1,1,8.878689293818311e-15,145L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M8.878689293818311e-15,145A145,145,0,1,1,-2.663606788145493e-14,-145L0,0Z" fill="#e377c2" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Protein Processing (1, 1)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #e377c2;"/><text class="name" x="17" y="0">Membrane Transport (1, 1)</text></g></g></g></svg></div>
+            <div class="center subsystem-fig"></div>
         </section>
 
 
@@ -11364,15 +11352,20 @@
             <h2>Phylogenetic Analysis</h2>
 
             <p>
+                The National Center for Biotechnology Information (NCBI) staff manually
+                select and categorize reference and representative genomes, which they
+                consider to be of high quality and importance to the research community.
+                PATRIC provides the reference and representative genomes, and includes them in the
+                phylogenetic analysis that is part of the Comprehensive Genome Analysis report.
                 The closest reference and representative genomes to 
-                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-16">16</a>]</sup>. PATRIC global
+                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-15">15</a>]</sup>. PATRIC global
                 protein families (PGFams)<sup class="reference">[<a href="#citation-7">7</a>]</sup> were selected from these
                 genomes to determine the phylogenetic placement of this genome.  The
-                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-18">18</a>]</sup>,
+                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-17">17</a>]</sup>,
                 and the nucleotides for each of those sequences were mapped to the protein alignment.
                 The joint set of amino acid and nucleotide alignments were concatenated into a data matrix,
-                and RaxML<sup class="reference">[<a href="#citation-19">19</a>]</sup> was used to analyze this matrix, with fast
-                bootstrapping<sup class="reference">[<a href="#citation-20">20</a>]</sup> was used to generate the support
+                and RaxML<sup class="reference">[<a href="#citation-18">18</a>]</sup> was used to analyze this matrix, with fast
+                bootstrapping<sup class="reference">[<a href="#citation-19">19</a>]</sup> was used to generate the support
                 values in the tree (<fig-ref>Figure 3</fig-ref>).
             </p>
 
@@ -11390,7 +11383,7 @@
         -->
         
         <h2>References</h2>
-        <references><ol class="references"><li id="citation-0">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-1">Bankevich A, Nurk S, Antipov D, Gurevich AA, Dvorkin M, Kulikov AS, Lesin VM, Nikolenko SI, Pham S, Prjibelski AD. 2012. SPAdes: a new genome assembly algorithm and its applications to single-cell sequencing. Journal of computational biology 19:455-477.</li><li id="citation-2">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-3">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-4">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-5">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-6">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-7">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-8">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-9">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-10">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-11">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-12">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-13">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-14">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-15">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-16">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-17">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-18">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-19">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
+        <references><ol class="references"><li id="citation-1">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-2">Bankevich A, Nurk S, Antipov D, Gurevich AA, Dvorkin M, Kulikov AS, Lesin VM, Nikolenko SI, Pham S, Prjibelski AD. 2012. SPAdes: a new genome assembly algorithm and its applications to single-cell sequencing. Journal of computational biology 19:455-477.</li><li id="citation-3">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-4">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-5">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-6">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-7">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-8">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-9">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-10">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-11">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-12">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-13">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-14">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-15">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-16">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-17">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-18">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-19">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
 
 
     
