--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -185,7 +185,7 @@
 
 
 
-            <table class="med-table kv-table center">
+            <table class="sm-table kv-table center">
                 <thead class="table-header">
                     <tr>
                         <th colspan="4">
@@ -310,11 +310,11 @@
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">May 1st 2018, 11:36:55am</td>
+                        <td class="align-right">May 1st 2018, 11:52:32am</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">May 1st 2018, 11:36:55am</td>
+                        <td class="align-right">May 1st 2018, 11:52:32am</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
@@ -11330,7 +11330,7 @@
         <section>
                 <h2>Antimicrobial Resistance Analysis</h2>
 
-                In <table-ref>Table 5</table-ref> we present the analysis of antimicrobial resistance phenotypes for .
+                The analysis of antimicrobial resistance phenotypes for Staphylococcus aureus strain VB4283 is given in <table-ref>Table 5</table-ref>.
 
                 <table class="lg-table kv-table center">
                     <thead class="table-header">
