--- a/reports/test-report-amr2.html
+++ b/reports/test-report-amr2.html
@@ -186,7 +186,7 @@
 
 
 
-            <table class="med-table kv-table center">
+            <table class="sm-table kv-table center">
                 <thead class="table-header">
                     <tr>
                         <th colspan="4">
@@ -311,11 +311,11 @@
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">May 1st 2018, 11:36:59am</td>
+                        <td class="align-right">May 1st 2018, 11:52:35am</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">May 1st 2018, 11:36:59am</td>
+                        <td class="align-right">May 1st 2018, 11:52:35am</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
