amr phenotype paragraph

--- a/reports/test-report-amr2.html
+++ b/reports/test-report-amr2.html
@@ -311,11 +311,11 @@
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">May 1st 2018, 11:52:35am</td>
+                        <td class="align-right">May 1st 2018, 12:30:29pm</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">May 1st 2018, 11:52:35am</td>
+                        <td class="align-right">May 1st 2018, 12:30:29pm</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
@@ -11322,7 +11322,6 @@
         <!--
           ## AMR
         -->
-
         <section>
 
 
