--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -310,11 +310,11 @@
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">May 1st 2018, 11:52:32am</td>
+                        <td class="align-right">May 1st 2018, 12:30:25pm</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">May 1st 2018, 11:52:32am</td>
+                        <td class="align-right">May 1st 2018, 12:30:25pm</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
@@ -11326,11 +11326,16 @@
         <!--
           ## AMR
         -->
-
         <section>
                 <h2>Antimicrobial Resistance Analysis</h2>
 
-                The analysis of antimicrobial resistance phenotypes for Staphylococcus aureus strain VB4283 is given in <table-ref>Table 5</table-ref>.
+                <p>
+                    Antimicrobial resistance phenotypes refer to the resistance or susceptibility of a given
+                    organism to one or more antibiotics. PATRIC provides AMR phenotype predictions
+                    using custom built AdaBoost (adaptive boosting) machine learning
+                    classifiers<sup class="reference">[<a href="#citation-6">6</a>]</sup><sup class="reference">[<a href="#citation-14">14</a>]</sup>.
+                    The predicted AMR phenotypes fo this genome are summarized in <table-ref>Table 5</table-ref>.
+                </p>
 
                 <table class="lg-table kv-table center">
                     <thead class="table-header">
@@ -11369,7 +11374,7 @@
             <h2>Subsystem Analysis</h2>
             <p>
                 A subsystem is a set of proteins that together implement a specific biological
-                process or structural complex<sup class="reference">[<a href="#citation-13">13</a>]</sup> and PATRIC annotation
+                process or structural complex<sup class="reference">[<a href="#citation-15">15</a>]</sup> and PATRIC annotation
                 includes an analysis of the subsystems unique to each genome.
                 An overview of the subsystems for this genome is provided in <fig-ref>Figure 2</fig-ref>.
             </p>
@@ -11392,14 +11397,14 @@
                 PATRIC provides the reference and representative genomes, and includes them in the
                 phylogenetic analysis that is part of the Comprehensive Genome Analysis report.
                 The closest reference and representative genomes to 
-                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-14">14</a>]</sup>. PATRIC global
+                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-16">16</a>]</sup>. PATRIC global
                 protein families (PGFams)<sup class="reference">[<a href="#citation-6">6</a>]</sup> were selected from these
                 genomes to determine the phylogenetic placement of this genome.  The
-                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-16">16</a>]</sup>,
+                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-18">18</a>]</sup>,
                 and the nucleotides for each of those sequences were mapped to the protein alignment.
                 The joint set of amino acid and nucleotide alignments were concatenated into a data matrix,
-                and RaxML<sup class="reference">[<a href="#citation-17">17</a>]</sup> was used to analyze this matrix, with fast
-                bootstrapping<sup class="reference">[<a href="#citation-18">18</a>]</sup> was used to generate the support
+                and RaxML<sup class="reference">[<a href="#citation-19">19</a>]</sup> was used to analyze this matrix, with fast
+                bootstrapping<sup class="reference">[<a href="#citation-20">20</a>]</sup> was used to generate the support
                 values in the tree (<fig-ref>Figure 3</fig-ref>).
             </p>
 
@@ -11417,7 +11422,7 @@
         -->
         
         <h2>References</h2>
-        <references><ol class="references"><li id="citation-1">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-2">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-3">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-4">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-5">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-6">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-7">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-8">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-9">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-10">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-11">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-12">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-13">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-14">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-15">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-16">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-17">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-18">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
+        <references><ol class="references"><li id="citation-1">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-2">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-3">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-4">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-5">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-6">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-7">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-8">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-9">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-10">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-11">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-12">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-13">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-14">Long SW, Olsen RJ, Eagar TN, et al. Population Genomic Analysis of 1,777 Extended-Spectrum Beta-Lactamase-Producing Klebsiella pneumoniae Isolates, Houston, Texas: Unexpected Abundance of Clonal Group 307. Projan SJ, ed. mBio. 2017;8(3):e00489-17. doi:10.1128/mBio.00489-17.</li><li id="citation-15">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-16">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-17">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-18">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-19">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-20">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
 
 
     
