bug fixes from sys call

--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -159,7 +159,7 @@
                 service at PATRIC<sup class="reference">[<a href="#citation-1">1</a>]</sup>.
             Based on the annotation statistics and a comparison to other genomes in PATRIC within
             this same species, this genome appears to be of Good quality.
-            <i></i>.
+
             Details of the analysis, including genes of
             interest (Specialty Genes), a functional categorization (Subsystems), 
             and a phylogenetic tree (Phylogenetic Analysis) are provided below.
@@ -310,11 +310,11 @@
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">May 1st 2018, 12:30:25pm</td>
+                        <td class="align-right">May 1st 2018, 2:41:14pm</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">May 1st 2018, 12:30:25pm</td>
+                        <td class="align-right">May 1st 2018, 2:41:14pm</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
@@ -11340,7 +11340,7 @@
                 <table class="lg-table kv-table center">
                     <thead class="table-header">
                         <tr>
-                            <th colspan="2"><table-num>Table 5.</table-num> Analysis of Antimicrobial Resistance Phenotypes</th>
+                            <th colspan="2"><table-num>Table 5.</table-num> Predicted Antimicrobial Resistance Phenotypes</th>
                         </tr>
                     </thead>
 
@@ -11380,7 +11380,7 @@
             </p>
 
             <fig-num>Figure 2</fig-num>
-            <div class="center subsystem-fig"></div>
+            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,0,1,125.57368354874362,72.49999999999997L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g><g><path d="M125.57368354874362,72.49999999999997A145,145,0,0,1,5.4870141240622665,144.89614444836806L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M5.4870141240622665,144.89614444836806A145,145,0,0,1,-113.20243259967684,90.610205018616L0,0Z" fill="#2ca02c" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-113.20243259967684,90.610205018616A145,145,0,0,1,-144.85864714910056,6.400964468920271L0,0Z" fill="#d62728" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-144.85864714910056,6.400964468920271A145,145,0,0,1,-131.47898608812753,-61.14144435027659L0,0Z" fill="#8c564b" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-131.47898608812753,-61.14144435027659A145,145,0,0,1,-102.20657114540663,-102.85337531991323L0,0Z" fill="#7f7f7f" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-102.20657114540663,-102.85337531991323A145,145,0,0,1,-70.11064452795608,-126.9231953737164L0,0Z" fill="#e377c2" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-70.11064452795608,-126.9231953737164A145,145,0,0,1,-32.64761137579054,-141.27679735701597L0,0Z" fill="#9467bd" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-32.64761137579054,-141.27679735701597A145,145,0,0,1,-18.245917181908556,-143.84744177840264L0,0Z" fill="#17becf" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-18.245917181908556,-143.84744177840264A145,145,0,0,1,-7.314660080880354,-144.8153850524908L0,0Z" fill="#bcbd22" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-7.314660080880354,-144.8153850524908A145,145,0,0,1,1.0214980297506323e-13,-145L0,0Z" fill="#aec7e8" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0">Metabolism (83, 538)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Protein Processing (40, 211)</text></g><g transform="translate(340, 90)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #2ca02c;"/><text class="name" x="17" y="0">Stress Response, Defense, Virulence (37, 152)</text></g><g transform="translate(340, 110)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #d62728;"/><text class="name" x="17" y="0">Energy (25, 181)</text></g><g transform="translate(340, 130)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #8c564b;"/><text class="name" x="17" y="0">DNA Processing (19, 84)</text></g><g transform="translate(340, 150)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #7f7f7f;"/><text class="name" x="17" y="0">Cellular Processes (14, 91)</text></g><g transform="translate(340, 170)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #e377c2;"/><text class="name" x="17" y="0">Membrane Transport (11, 58)</text></g><g transform="translate(340, 190)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #9467bd;"/><text class="name" x="17" y="0">RNA Processing (11, 45)</text></g><g transform="translate(340, 210)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #17becf;"/><text class="name" x="17" y="0">Regulation And Cell Signaling (4, 16)</text></g><g transform="translate(340, 230)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #bcbd22;"/><text class="name" x="17" y="0">Miscellaneous (3, 6)</text></g><g transform="translate(340, 250)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #aec7e8;"/><text class="name" x="17" y="0">Cell Envelope (2, 7)</text></g></g></g></svg></div>
         </section>
 
 
