--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -160,7 +160,8 @@
             Based on the annotation statistics and a comparison to other genomes in PATRIC within
             this same species, this genome appears to be of Poor quality.
                 The reasons affecting the quality of genome follows:
-            <i>Genome too short, Low CheckM completeness score, Abnormal CDS ratio</i>.
+                <i>Genome too short, Low CheckM completeness score, Abnormal CDS ratio</i>.
+
             Details of the analysis, including genes of
             interest (Specialty Genes), a functional categorization (Subsystems), 
             and a phylogenetic tree (Phylogenetic Analysis) are provided below.
@@ -11340,7 +11341,7 @@
             </p>
 
             <fig-num>Figure 2</fig-num>
-            <div class="center subsystem-fig"></div>
+            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,1,1,8.878689293818311e-15,145L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M8.878689293818311e-15,145A145,145,0,1,1,-2.663606788145493e-14,-145L0,0Z" fill="#e377c2" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Protein Processing (1, 1)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #e377c2;"/><text class="name" x="17" y="0">Membrane Transport (1, 1)</text></g></g></g></svg></div>
         </section>
 
 
