--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -312,11 +312,11 @@
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">May 1st 2019, 1:27:26pm</td>
+                        <td class="align-right">May 1st 2019, 1:37:11pm</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">May 1st 2019, 1:27:26pm</td>
+                        <td class="align-right">May 1st 2019, 1:37:11pm</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
@@ -11248,6 +11248,21 @@
         </section>
 
 
+        <!--
+          ## Subsystem Analysis
+        -->
+        <section>
+            <h2>Subsystem Analysis</h2>
+            <p>
+                A subsystem is a set of proteins that together implement a specific biological
+                process or structural complex<sup class="reference">[<a href="#citation-7">7</a>]</sup> and PATRIC annotation
+                includes an analysis of the subsystems unique to each genome.
+                An overview of the subsystems for this genome is provided in <fig-ref>Figure 2</fig-ref>.
+            </p>
+
+            <fig-num>Figure 2</fig-num>
+            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,1,1,8.878689293818311e-15,145L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M8.878689293818311e-15,145A145,145,0,1,1,-2.663606788145493e-14,-145L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">PROTEIN PROCESSING (1, 1)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0">MEMBRANE TRANSPORT (1, 1)</text></g></g></g></svg></div>
+        </section>
 
 
 
@@ -11258,9 +11273,9 @@
             <h2>Specialty Genes</h2>
             <p>
                 Many of the genes annotated in  have homology to known
-                transporters<sup class="reference">[<a href="#citation-7">7</a>]</sup>, virulence factors<sup class="reference">[<a href="#citation-8">8</a>]</sup><sup class="reference">[<a href="#citation-9">9</a>]</sup>,
-                drug targets<sup class="reference">[<a href="#citation-10">10</a>]</sup><sup class="reference">[<a href="#citation-11">11</a>]</sup>,
-                and antibiotic resistance genes<sup class="reference">[<a href="#citation-12">12</a>]</sup>.
+                transporters<sup class="reference">[<a href="#citation-8">8</a>]</sup>, virulence factors<sup class="reference">[<a href="#citation-9">9</a>]</sup><sup class="reference">[<a href="#citation-10">10</a>]</sup>,
+                drug targets<sup class="reference">[<a href="#citation-11">11</a>]</sup><sup class="reference">[<a href="#citation-12">12</a>]</sup>,
+                and antibiotic resistance genes<sup class="reference">[<a href="#citation-13">13</a>]</sup>.
 
                 The number of genes and the specific source database where homology was found is provided (<table-ref>Table 4</table-ref>).
             </p>
@@ -11305,24 +11320,6 @@
         </section>
 
 
-
-        <!--
-          ## Subsystem Analysis
-        -->
-        <section>
-            <h2>Subsystem Analysis</h2>
-            <p>
-                A subsystem is a set of proteins that together implement a specific biological
-                process or structural complex<sup class="reference">[<a href="#citation-13">13</a>]</sup> and PATRIC annotation
-                includes an analysis of the subsystems unique to each genome.
-                An overview of the subsystems for this genome is provided in <fig-ref>Figure 2</fig-ref>.
-            </p>
-
-            <fig-num>Figure 2</fig-num>
-            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,1,1,8.878689293818311e-15,145L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M8.878689293818311e-15,145A145,145,0,1,1,-2.663606788145493e-14,-145L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">PROTEIN PROCESSING (1, 1)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0">MEMBRANE TRANSPORT (1, 1)</text></g></g></g></svg></div>
-        </section>
-
-
         <!--
           ## Phylogenetic Analysis
         -->
@@ -11361,7 +11358,7 @@
         -->
         
         <h2>References</h2>
-        <references><ol class="references"><li id="citation-1">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-2">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-3">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-4">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-5">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-6">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-7">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-8">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-9">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-10">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-11">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-12">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-13">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-14">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-15">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-16">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-17">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-18">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
+        <references><ol class="references"><li id="citation-1">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-2">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-3">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-4">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-5">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-6">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-7">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-8">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-9">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-10">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-11">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-12">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-13">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-14">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-15">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-16">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-17">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-18">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
 
 
     
